# LOLO.lead-management

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/execution-results/: 20260330T194530Z_lead-search-run_run_b713c01a1c08.json  20260330T195127Z_lead-search-run_run_247a211ae94a.json  20260330T195650Z_lead-search-run_run_1b3499e681b1.json  20260330T200403Z_lead-search-run_run_c25d626548d8.json  20260406T093340Z_lead-search-run_run_f930613376ac.json  20260406T102644Z_lead-search-run_run_862f412da98c.json  20260406T103851Z_lead-search-run_run_886bfd58c764.json  20260406T103941Z_shortlist-selection_run_886bfd58c764.json  20260406T104817Z_lead-search-run_run_173d54ca0a57.json  20260406T105555Z_lead-search-run_run_98dc6ce3dcd3.json  20260406T111433Z_lead-search-run_run_c20bd6e8f471.json  20260406T112316Z_shortlist-selection_run_c20bd6e8f471.json  20260406T114214Z_lead-search-run_run_94d83dd8aa24.json  20260406T114257Z_shortlist-selection_run_98dc6ce3dcd3.json  20260406T114505Z_shortlist-selection_run_98dc6ce3dcd3.json  20260406T114736Z_shortlist-selection_run_98dc6ce3dcd3.json  20260406T114925Z_shortlist-selection_run_98dc6ce3dcd3.json  20260406T115131Z_shortlist-selection_run_173d54ca0a57.json  20260406T115342Z_shortlist-selection_run_f930613376ac.json  20260406T115522Z_shortlist-selection_run_f930613376ac.json  20260406T115759Z_shortlist-selection_run_c25d626548d8.json  20260406T165847Z_lead-search-run_run_f689f839471c.json  (+72 more)
docs/: architecture.md
scripts/: compare_llm_runs.py
tests/: helpers.py
tests/smoke/: test_engine_flow.py
(+89 files in other folders)
